--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
     - .:/contactApp
+    - ./db.sqlite3:/contactApp/db.sqlite3
     ports:
     - "8000:8000"
