--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.2.10
 Django==3.1
+numpy==1.19.1
+pandas==1.1.0
+psycopg2-binary==2.8.5
+python-dateutil==2.8.1
 pytz==2020.1
+six==1.15.0
+SQLAlchemy==1.3.18
 sqlparse==0.3.1
